src/styles/app.scss
@import 'variables';
$fa-font-path: "~font-awesome/fonts";
@import '~font-awesome/scss/font-awesome';

.app-container {
    display: flex;
    flex-direction: column;
    height:100%;

    .app-header {
        flex: 0 1 auto;
        height: 5em;
        background-image: url("../assets/reperio-color-band.png");
        background-color: white;
        background-size: cover;
        background-position: center top;
        width: 100%;
    }

    .app-root {
        flex: 1 1 auto;

        .app-main {
            display: flex;
            flex-direction: row;
        }
    }

    .app-footer {
        height: 40px;
        background-color: $primary-color;
        width: 100%;
    }
}




.group { 
    position:relative; 
    margin-bottom: 35px; 
    margin-left: 40px;
}

.inputMaterial	{
    font-size:18px;
    padding:10px 10px 10px 5px;
    display:block;
    width:300px;
    border:none;
    border-bottom:1px solid #757575;
}

.inputMaterial:focus 		{ 
    outline:none;
    border-bottom: none;
}

    /* LABEL ======================================= */

label {
    color:#999; 
    font-size:14px;
    font-weight:normal;
    position:absolute;
    pointer-events:none;
    left:5px;
    top:10px;
    transition:0.2s ease all; 
    -moz-transition:0.2s ease all; 
    -webkit-transition:0.2s ease all;
}
 

/* active state */
.inputMaterial:focus ~ label, .inputMaterial:valid ~ label {
    top:-20px;
    font-size:14px;
    color: #009688;
}

.bar 	{ position:relative; display:block; width:315px; }
.bar:before, .bar:after 	{
    content:'';
    height:2px; 
    width:0;
    bottom:1px; 
    position:absolute;
    background: #009688; 
    transition:0.2s ease all; 
    -moz-transition:0.2s ease all; 
    -webkit-transition:0.2s ease all;
}
.bar:before {
    left:50%;
}
.bar:after {
    right:50%; 
}

/* active state */
.inputMaterial:focus ~ .bar:before, .inputMaterial:focus ~ .bar:after {
    width:50%;
}

.app-content {
    width: 100%;
}

.indented {
    margin-left: 20px;
}

.icon {
    width: 16px;
    height: 16px;
}

